--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a future software developer with an interest in game design</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Memphis, TN </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing video games, drawing, reading and listening to music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be a game designer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Fort Worth, TX </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To achieve my lifelong dream of going into the gaming industry</p>
     </section>
 
     <footer id="footer">
